2008-04-15  yetist  <yetist@gmail.com>

	* lunar/lunar-date.c: 
	* po/zh_CN.po: 
	use C style unicode of solar term.
	* AUTHORS: add author.
	* tests/test-date.c: init random.

2008-04-15  yetist  <yetist@gmail.com>

	* lunar/lunar-date.c: add thank.
	* data/holiday.dat: remove my birthday.

2008-04-15  redwoods  <redwooods@gmail.com>

	* lunar/lunar-date.c:
	Add function of jie2qi4.
	* data/holiday.dat:
	Modify some festivals.

2008-03-03  yetist  <yetist@gmail.com>

	* pinyin.sh: 
	* lunar/lunar-date.c: 
	* po/zh_CN.po: 
	revert to r33. add pinyin.sh.

=== liblunar-0.2.6 released ===

2008-03-03  yetist  <yetist@gmail.com>

	* configure.ac: 
	liblunar-0.2.6 released

2008-03-03  yetist  <yetist@gmail.com>

	* lunar/calendar.patch: 
	* lunar/lunar-calendar.c: 
	* lunar/lunar-date.c: 
	* po/zh_CN.po: 
	use pinyin on "C" locale.

=== liblunar-0.2.5 released ===

2008-02-25  yetist  <yetist@gmail.com>

	* README: 
	* configure.ac: 
	* NEWS: 

	liblunar-0.2.5 released

2008-02-25  yetist  <yetist@gmail.com>

	* docs/reference/lunar-docs.sgml: change document name. 
	* po/zh_CN.po: filled in the header of po/zh_CN.po

2008-02-19  yetist  <yetist@gmail.com>

	* lunar/lunar-main.c: 
	* lunar/lunar-date.c: 
	* tests/test-date.c: 
	* Makefile.am: 
	* po/zh_CN.po: 
	filled in "This file is part of ________."

2008-02-19  yetist  <yetist@gmail.com>

	* lunar/lunar-date.h: 
	* lunar/update-calendar.sh: 
	* lunar/lunar.h: 
	* lunar/calendar.patch: 
	* lunar/lunar-main.h: 
	* lunar/lunar-calendar.c: 
	* lunar/Makefile.am: 
	fixed that if select day changed, the header doesn't change.
	* bindings/python/calendar.override: 
	* bindings/python/lunarmodule.c: 
	* bindings/python/Makefile.am: 
	* bindings/python/lunar-demo.py: 
	* configure.ac: 
	* Makefile.am: 
	* liblunar-1.pc.in: 
	change the python module to "lunar".

2008-02-19  yetist  <yetist@gmail.com>

	* AUTHORS: 
	* Makefile.am: 
	* README: 
	* autogen.sh: 
	* configure.ac: 
	* liblunar-1.pc.in: 
	* bindings/: 
	* data/: 